<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.23">
  <DUT Name="T_BCD_StateMachine" Id="{2790d479-e97f-4b59-8518-c08d8c9ba507}">
    <Declaration><![CDATA[TYPE T_BCD_StateMachine :
STRUCT
	/// actual state
	intState: INT;
	/// state of last cycle
	intStateLastCycle: INT;
	/// save history backup p.e. in ERROR state
	intStateHistory: INT;
	/// set state for next cycle
	intStateNext: INT;
	/// Time in this State
	udiTimeInState_ms: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>